--- a/index.html
+++ b/index.html
@@ -130,8 +130,8 @@
                 </div>
                 <div>
                     <ul class="info-links__btn">
-                        <li class="info-links__list-items"><img src="./images/seach-icon.png" alt="icon" width="33"><a
-                                class="info-links__list-item info-links__list-item_hover" href="">ПОИСК</a></li>
+                        <li class="info-links__list-items"><img src="./images/seach-icon.png" alt="icon" width="33"><input
+                                class="info-links__list-item info-links__list-item_hover" placeholder="ПОИСК"></li>
                     </ul>
                 </div>
             </div>
