--- a/index.html
+++ b/index.html
@@ -17,14 +17,11 @@
     <header>
         <div class="header__container">
             <img src="./images/logo.png" alt="Лого">
-            <!-- <div class="header__logo">
-               
-            </div> -->
             <div class="header__nav">
                 <div class="header__nav-item">
                     <div class="header__nav-item_btn">
                         <img src="./images/seach-icon.png" alt="icon" width="18">
-                        <input class="header__nav-item_btn-input" placeholder="ПОИСК">
+                        <input type="text" size="10" class="header__nav-item_btn-input" placeholder="ПОИСК">
                     </div>
                     <div class="header__nav-item-group">
                         <p class="header__nav-item-text">client@chemial.ru</p>
@@ -36,9 +33,9 @@
                         </div>
                     </div>
                     <div class="header__icon">
-                        <a href=""><img src="./images/icon-scales.png" alt="icon"></a>
-                        <a href=""><img src="./images/icon-heart.png" alt="icon"></a>
-                        <a href=""><img src="./images/icon-people.png" alt="icon"></a>
+                        <a href="#"><img src="./images/icon-scales.png" alt="icon"></a>
+                        <a href="#"><img src="./images/icon-heart.png" alt="icon"></a>
+                        <a href="#"><img src="./images/icon-people.png" alt="icon"></a>
                     </div>
                     <div class="header__nav-item_basket">
                         <img src="./images/icon-basket.png" alt="icon">
@@ -46,15 +43,15 @@
                     </div>
                 </div>
                 <ul class="header__nav-item-list">
-                    <li id="nav-item" class="header__nav-item">КАТАЛОГ
+                    <li class="header__nav-item">КАТАЛОГ
                     </li>
-                    <li id="nav-item" class="header__nav-item">ПРОИЗВОДСТВО
+                    <li class="header__nav-item">ПРОИЗВОДСТВО
                     </li>
-                    <li id="nav-item" class="header__nav-item">ХИМИЧЕСКАЯ ПРОДУКЦИЯ
+                    <li class="header__nav-item">ХИМИЧЕСКАЯ ПРОДУКЦИЯ
                     </li>
-                    <li id="nav-item" class="header__nav-item">КОНТАКТЫ
+                    <li class="header__nav-item">КОНТАКТЫ
                     </li>
-                    <li id="nav-item" class="header__nav-item">ОПЛАТА И ДОСТАВКА
+                    <li class="header__nav-item">ОПЛАТА И ДОСТАВКА
                     </li>
                 </ul>
             </div>
@@ -130,8 +127,9 @@
                 </div>
                 <div>
                     <ul class="info-links__btn">
-                        <li class="info-links__list-items"><img src="./images/seach-icon.png" alt="icon" width="33"><input
-                                class="info-links__list-item info-links__list-item_hover" placeholder="ПОИСК"></li>
+                        <li class="info-links__list-items"><img src="./images/seach-icon.png" alt="icon"
+                                width="33"><input type="text" class="info-links__list-item info-links__list-item_hover"
+                                placeholder="ПОИСК"></li>
                     </ul>
                 </div>
             </div>
@@ -357,32 +355,33 @@
             </div>
         </section>
         <section class="section partners section-item">
-            <div class="info-links_group">
+            <div class="info-links_group partners-links_group">
                 <div class="partners-links">
                     <h3 class="info-links__list_header">НАШИ КЛИЕНТЫ</h3>
                     <div class="partners__list section-item-container">
-                        <img src="./images/partners-img.png" alt="Лукойл">
-                        <img src="./images/partners-img2.png" alt="Роснефть">
-                        <img src="./images/partners-img3.png" alt="Газпром">
-                        <img src="./images/partners-img.png" alt="Лукойл">
-                        <img src="./images/partners-img2.png" alt="Роснефть">
-                        <img src="./images/partners-img3.png" alt="Газпром">
-                        <img src="./images/partners-img.png" alt="Лукойл">
-                        <img src="./images/partners-img2.png" alt="Роснефть">
-                        <img src="./images/partners-img3.png" alt="Газпром">
+                        <img class="partners__list-img" src="./images/partners-img.png" alt="Лукойл">
+                        <img class="partners__list-img" src="./images/partners-img2.png" alt="Роснефть">
+                        <img class="partners__list-img" src="./images/partners-img3.png" alt="Газпром">
+                        <img class="partners__list-img" src="./images/partners-img.png" alt="Лукойл">
+                        <img class="partners__list-img" src="./images/partners-img2.png" alt="Роснефть">
+                        <img class="partners__list-img" src="./images/partners-img3.png" alt="Газпром">
+                        <img class="partners__list-img" src="./images/partners-img.png" alt="Лукойл">
+                        <img class="partners__list-img" src="./images/partners-img2.png" alt="Роснефть">
+                        <img class="partners__list-img" src="./images/partners-img3.png" alt="Газпром">
                     </div>
                 </div>
                 <div class="partners-links partners-links_color">
                     <h3 class="info-links__list_header">КОНТАКТЫ</h3>
                     <div class="partners-links__list">
-                        <ul class="info-links__list_gap">
+                        <ul class="info-links__list_gap partners-links__list_gap">
                             <li class="info-links__list-items"><img src="./images/flag_icon.png" alt="icon"
                                     width="33"><a class="info-links__list-item" href="#">+7 812 777-77-77
                                 </a></li>
                             <li class="info-links__list-items"><img src="./images/document-icon.png" alt="icon"
                                     width="33"><a class="info-links__list-item" href="#">client@chemial.ru</a></li>
                         </ul>
-                        <a class="partners-link" href=""><button class="popular-card__btn">Обратный звонок</button></a>
+                        <a class="partners-link" href=""><button
+                                class="popular-card__btn popular-card__btn-contacts">Обратный звонок</button></a>
                     </div>
                 </div>
             </div>
