added width for the img logo

--- a/index.html
+++ b/index.html
@@ -18,10 +18,12 @@
         <div class="header__container">
             <img class="header-logo" src="./images/logo.png" alt="Лого">
             <div class="header__nav-item">
-                <form class="header__nav-item_btn">
-                    <img src="./images/seach-icon.png" alt="icon" width="18">
-                    <input type="text" size="10" class="header__nav-item_btn-input" placeholder="ПОИСК">
-                </form>
+                <div>
+                    <label class="header__nav-item_btn">
+                        <img src="./images/seach-icon.png" alt="icon" width="18">
+                        <input type="text" size="10" class="header__nav-item_btn-input" placeholder="ПОИСК">
+                    </label>
+                </div>
                 <div class="header__nav-item-group">
                     <p class="header__nav-item-text"><a target="_blank" class="header__nav-item-text links-hover"
                             href="mailto:client@chemial.ru">
