added html/css for catalog page

--- a/index.html
+++ b/index.html
@@ -216,7 +216,9 @@
                     <a target="_blank" class="see-all__title" href="#">Все новости</a>
                 </div>
             </div>
+            
             <div class="section-item-container">
+                <!-- <div class="shadow"></div> -->
                 <div class="news-card card-shadow">
                     <a target="_blank" href="#" class="card-link"></a>
                     <div class="news-card__image-wrapper">
