changed html/css for mobile

--- a/catalog.html
+++ b/catalog.html
@@ -87,7 +87,7 @@
                     </ul>
                 </div>
             </div>
-            
+            <div class="type-of_group">
                 <div class="type-of-goods">
                     <button class="type-of-goods_btn" type="submit"><img src="./images/icon-catalog.png"
                             alt="icon"></button>
@@ -98,7 +98,7 @@
                     <p class="type-of-price_header">По возрастанию</p>
                     <img class="type-of-price_img" src="./images/arrow-up-down-icon.png" alt="icon">
                 </div>
-
+            </div>
         </section>
         <section class="cards-item section">
             <div class="sidebar__container">
