--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     <div class='menu-button'></div>
                 </label>
                 <ul class="header__nav-item-list">
-                    <li class="header__nav-item header__nav-item-burger"><a class="header__nav-item links-hover" href="#">КАТАЛОГ</a>
+                    <li class="header__nav-item header__nav-item-burger"><a class="header__nav-item links-hover" href="./catalog.html">КАТАЛОГ</a>
                     </li>
                     <li class="header__nav-item header__nav-item-burger"><a class="header__nav-item links-hover" href="#">ПРОИЗВОДСТВО</a>
                     </li>
