added hover for scrollbar

--- a/catalog.html
+++ b/catalog.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap"
         rel="stylesheet">
+    <script defer src="./script.js"></script>
 </head>
 
 <body>
@@ -51,21 +52,16 @@
                     <div class='menu-button'></div>
                 </label>
                 <ul class="header__nav-item-list">
-                    <li class="header__nav-item header__nav-item-burger"><a class="header__nav-item links-hover"
-                            href="#">КАТАЛОГ</a>
+                    <li class="header__nav-item header__nav-item-burger"><a class="header__nav-item links-hover" href="./index.html">КАТАЛОГ</a>
                     </li>
-                    <li class="header__nav-item header__nav-item-burger"><a class="header__nav-item links-hover"
-                            href="#">ПРОИЗВОДСТВО</a>
+                    <li class="header__nav-item header__nav-item-burger"><a class="header__nav-item links-hover" href="#">ПРОИЗВОДСТВО</a>
                     </li>
-                    <li class="header__nav-item header__nav-item-burger"><a class="header__nav-item links-hover"
-                            href="#">ХИМИЧЕСКАЯ
+                    <li class="header__nav-item header__nav-item-burger"><a class="header__nav-item links-hover" href="#">ХИМИЧЕСКАЯ
                             ПРОДУКЦИЯ</a>
                     </li>
-                    <li class="header__nav-item header__nav-item-burger"><a class="header__nav-item links-hover"
-                            href="#">КОНТАКТЫ</a>
+                    <li class="header__nav-item header__nav-item-burger"><a class="header__nav-item links-hover" href="#">КОНТАКТЫ</a>
                     </li>
-                    <li class="header__nav-item header__nav-item-burger"><a class="header__nav-item links-hover"
-                            href="#">ОПЛАТА И ДОСТАВКА</a>
+                    <li class="header__nav-item header__nav-item-burger"><a class="header__nav-item links-hover" href="#">ОПЛАТА И ДОСТАВКА</a>
                     </li>
                 </ul>
             </div>
