added btn on the info-nav

--- a/catalog.html
+++ b/catalog.html
@@ -79,6 +79,67 @@
                 <div class="info-nav_range">
                     <p class="info-nav_range-header">АССОРТИМЕНТ&nbsp;ТОВАРОВ</p>
                     <img class="info-nav_range-img" src="./images/arrow-right.png" alt="arrow">
+                    <div class="info-links info-links__nav_range">
+                        <h3 class="info-links__list_header">АССОРТИМЕНТ ТОВАРОВ</h3>
+                        <div class="info-links__list">
+                            <ul class="info-links__list_gap">
+                                <li class="info-links__list-items"><img src="./images/flag_icon.png" alt="icon"
+                                        width="33"><a target="_blank" class="info-links__list-item" href="#">Химическая
+                                        продукция
+                                    </a></li>
+                                <li class="info-links__list-items"><img src="./images/document-icon.png" alt="icon"
+                                        width="33"><a target="_blank" class="info-links__list-item" href="#">Хобби и
+                                        творчество</a></li>
+                                <li class="info-links__list-items"><img src="./images/vacancy-icon.png" alt="icon"
+                                        width="33"><a target="_blank" class="info-links__list-item" href="#">Индикаторы
+                                        и красители</a></li>
+                            </ul>
+                            <ul class="info-links__list_gap">
+                                <li class="info-links__list-items"><img src="./images/mask-icon.png" alt="icon"
+                                        width="33"><a target="_blank" class="info-links__list-item" href="">Питательные
+                                        среды
+                                    </a></li>
+                                <li class="info-links__list-items"><img src="./images/wond-icon.png" alt="icon"
+                                        width="33"><a target="_blank" class="info-links__list-item" href="">Лабораторное
+                                        оборудование</a></li>
+                                <li class="info-links__list-items"><img src="./images/grant-icon.png" alt="icon"
+                                        width="33"><a target="_blank" class="info-links__list-item"
+                                        href="">Измерительное
+                                        оборудование</a></li>
+                            </ul>
+                            <ul class="info-links__list_gap">
+                                <li class="info-links__list-items"><img src="./images/payment-icon.png" alt="icon"
+                                        width="33"><a target="_blank" class="info-links__list-item"
+                                        href="">Вспомогательное
+                                        оборудование
+                                    </a></li>
+                                <li class="info-links__list-items"><img src="./images/payment-icon.png" alt="icon"
+                                        width="33"><a target="_blank" class="info-links__list-item" href="">Бумага
+                                        фильтровальная</a></li>
+                                <li class="info-links__list-items"><img src="./images/payment-icon.png" alt="icon"
+                                        width="33"><a target="_blank" class="info-links__list-item" href="">Средства
+                                        защиты</a></li>
+                            </ul>
+                            <ul class="info-links__list_gap">
+                                <li class="info-links__list-items"><img src="./images/payment-icon.png" alt="icon"
+                                        width="33"><a target="_blank" class="info-links__list-item"
+                                        href="">Стандарт-титры
+                                        (фиксаналы)
+                                    </a></li>
+                                <li class="info-links__list-items"><img src="./images/payment-icon.png" alt="icon"
+                                        width="33"><a target="_blank" class="info-links__list-item" href="">Стандартные
+                                        образцы</a></li>
+                            </ul>
+                        </div>
+                        <div>
+                            <ul class="info-links__btn">
+                                <li class="info-links__list-items"><img src="./images/seach-icon.png" alt="icon"
+                                        width="33"><input type="text"
+                                        class="info-links__list-item info-links__list-item_hover" placeholder="ПОИСК">
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
                 </div>
                 <div>
                     <ul class="info-links__btn">
@@ -91,10 +152,10 @@
             </div>
             <div class="type-of_group">
                 <div class="type-of-goods">
-                    <button class="type-of-goods_btn" type="submit"><img class="layout-image" src="./images/layout-icon-orange.png"
-                            alt="icon"></button>
-                    <button class="type-of-goods_btn-list" type="submit"><img class="list-image" src="./images/list-icon-grey.png"
-                            alt="icon"></button>
+                    <button class="type-of-goods_btn" type="submit"><img class="layout-image"
+                            src="./images/layout-icon-orange.png" alt="icon"></button>
+                    <button class="type-of-goods_btn-list" type="submit"><img class="list-image"
+                            src="./images/list-icon-grey.png" alt="icon"></button>
                 </div>
                 <div class="type-of-price">
                     <p class="type-of-price_header">По возрастанию</p>
