added item page

--- a/catalog.html
+++ b/catalog.html
@@ -290,7 +290,7 @@
             <div class="cards-container">
                 <div class="cards">
                     <div class="news-card popular-card__item card-shadow">
-                        <a target="_blank" href="#" class="card-link"></a>
+                        <a target="_blank" href="./item.html" class="card-link"></a>
                         <div class="popular-card__image-wrapper">
                             <img class="popular-card__image" src="./images/card-item.png">
                         </div>
@@ -306,7 +306,7 @@
                         </div>
                     </div>
                     <div class="news-card popular-card__item card-shadow">
-                        <a target="_blank" href="#" class="card-link"></a>
+                        <a target="_blank" href="./item.html" class="card-link"></a>
                         <div class="popular-card__image-wrapper">
                             <img class="popular-card__image" src="./images/card-item.png">
                         </div>
@@ -322,7 +322,7 @@
                         </div>
                     </div>
                     <div class="news-card popular-card__item card-shadow">
-                        <a target="_blank" href="#" class="card-link"></a>
+                        <a target="_blank" href="./item.html" class="card-link"></a>
                         <div class="popular-card__image-wrapper">
                             <img class="popular-card__image" src="./images/card-item.png">
                         </div>
@@ -338,7 +338,7 @@
                         </div>
                     </div>
                     <div class="news-card popular-card__item card-shadow">
-                        <a target="_blank" href="#" class="card-link"></a>
+                        <a target="_blank" href="./item.html" class="card-link"></a>
                         <div class="popular-card__image-wrapper">
                             <img class="popular-card__image" src="./images/card-item.png">
                         </div>
@@ -354,7 +354,7 @@
                         </div>
                     </div>
                     <div class="news-card popular-card__item card-shadow">
-                        <a target="_blank" href="#" class="card-link"></a>
+                        <a target="_blank" href="./item.html" class="card-link"></a>
                         <div class="popular-card__image-wrapper">
                             <img class="popular-card__image" src="./images/card-item.png">
                         </div>
@@ -370,7 +370,7 @@
                         </div>
                     </div>
                     <div class="news-card popular-card__item card-shadow">
-                        <a target="_blank" href="#" class="card-link"></a>
+                        <a target="_blank" href="./item.html" class="card-link"></a>
                         <div class="popular-card__image-wrapper">
                             <img class="popular-card__image" src="./images/card-item.png">
                         </div>
@@ -386,7 +386,7 @@
                         </div>
                     </div>
                     <div class="news-card popular-card__item card-shadow">
-                        <a target="_blank" href="#" class="card-link"></a>
+                        <a target="_blank" href="./item.html" class="card-link"></a>
                         <div class="popular-card__image-wrapper">
                             <img class="popular-card__image" src="./images/card-item.png">
                         </div>
@@ -402,7 +402,7 @@
                         </div>
                     </div>
                     <div class="news-card popular-card__item card-shadow">
-                        <a target="_blank" href="#" class="card-link"></a>
+                        <a target="_blank" href="./item.html" class="card-link"></a>
                         <div class="popular-card__image-wrapper">
                             <img class="popular-card__image" src="./images/card-item.png">
                         </div>
@@ -418,7 +418,7 @@
                         </div>
                     </div>
                     <div class="news-card popular-card__item card-shadow">
-                        <a target="_blank" href="#" class="card-link"></a>
+                        <a target="_blank" href="./item.html" class="card-link"></a>
                         <div class="popular-card__image-wrapper">
                             <img class="popular-card__image" src="./images/card-item.png">
                         </div>
@@ -434,7 +434,7 @@
                         </div>
                     </div>
                     <div class="news-card popular-card__item card-shadow">
-                        <a target="_blank" href="#" class="card-link"></a>
+                        <a target="_blank" href="./item.html" class="card-link"></a>
                         <div class="popular-card__image-wrapper">
                             <img class="popular-card__image" src="./images/card-item.png">
                         </div>
@@ -450,7 +450,7 @@
                         </div>
                     </div>
                     <div class="news-card popular-card__item card-shadow">
-                        <a target="_blank" href="#" class="card-link"></a>
+                        <a target="_blank" href="./item.html" class="card-link"></a>
                         <div class="popular-card__image-wrapper">
                             <img class="popular-card__image" src="./images/card-item.png">
                         </div>
@@ -466,7 +466,7 @@
                         </div>
                     </div>
                     <div class="news-card popular-card__item card-shadow">
-                        <a target="_blank" href="#" class="card-link"></a>
+                        <a target="_blank" href="./item.html" class="card-link"></a>
                         <div class="popular-card__image-wrapper">
                             <img class="popular-card__image" src="./images/card-item.png">
                         </div>
@@ -492,6 +492,7 @@
                     </div>
                     <div class="cards-list">
                         <div class="popular-card__item-list">
+                            <a target="_blank" href="./item.html" class="card-link"></a>
                             <div class="popular-card__image-wrapper-list">
                                 <img class="popular-card__image-list" src="./images/card-item.png">
                             </div>
@@ -548,6 +549,7 @@
                             <button class="popular-card_list-fav"><img src="./images/heart-icon.png" alt=""></button>
                         </div>
                         <div class="popular-card__item-list">
+                            <a target="_blank" href="./item.html" class="card-link"></a>
                             <div class="popular-card__image-wrapper-list">
                                 <img class="popular-card__image-list" src="./images/card-item.png">
                             </div>
@@ -604,6 +606,7 @@
                             <button class="popular-card_list-fav"><img src="./images/heart-icon.png" alt=""></button>
                         </div>
                         <div class="popular-card__item-list">
+                            <a target="_blank" href="./item.html" class="card-link"></a>
                             <div class="popular-card__image-wrapper-list">
                                 <img class="popular-card__image-list" src="./images/card-item.png">
                             </div>
@@ -660,6 +663,7 @@
                             <button class="popular-card_list-fav"><img src="./images/heart-icon.png" alt=""></button>
                         </div>
                         <div class="popular-card__item-list">
+                            <a target="_blank" href="./item.html" class="card-link"></a>
                             <div class="popular-card__image-wrapper-list">
                                 <img class="popular-card__image-list" src="./images/card-item.png">
                             </div>
@@ -716,6 +720,7 @@
                             <button class="popular-card_list-fav"><img src="./images/heart-icon.png" alt=""></button>
                         </div>
                         <div class="popular-card__item-list">
+                            <a target="_blank" href="./item.html" class="card-link"></a>
                             <div class="popular-card__image-wrapper-list">
                                 <img class="popular-card__image-list" src="./images/card-item.png">
                             </div>
@@ -772,6 +777,7 @@
                             <button class="popular-card_list-fav"><img src="./images/heart-icon.png" alt=""></button>
                         </div>
                         <div class="popular-card__item-list">
+                            <a target="_blank" href="./item.html" class="card-link"></a>
                             <div class="popular-card__image-wrapper-list">
                                 <img class="popular-card__image-list" src="./images/card-item.png">
                             </div>
@@ -828,6 +834,7 @@
                             <button class="popular-card_list-fav"><img src="./images/heart-icon.png" alt=""></button>
                         </div>
                         <div class="popular-card__item-list">
+                            <a target="_blank" href="./item.html" class="card-link"></a>
                             <div class="popular-card__image-wrapper-list">
                                 <img class="popular-card__image-list" src="./images/card-item.png">
                             </div>
@@ -884,6 +891,7 @@
                             <button class="popular-card_list-fav"><img src="./images/heart-icon.png" alt=""></button>
                         </div>
                         <div class="popular-card__item-list">
+                            <a target="_blank" href="./item.html" class="card-link"></a>
                             <div class="popular-card__image-wrapper-list">
                                 <img class="popular-card__image-list" src="./images/card-item.png">
                             </div>
@@ -940,6 +948,7 @@
                             <button class="popular-card_list-fav"><img src="./images/heart-icon.png" alt=""></button>
                         </div>
                         <div class="popular-card__item-list">
+                            <a target="_blank" href="./item.html" class="card-link"></a>
                             <div class="popular-card__image-wrapper-list">
                                 <img class="popular-card__image-list" src="./images/card-item.png">
                             </div>
@@ -996,6 +1005,7 @@
                             <button class="popular-card_list-fav"><img src="./images/heart-icon.png" alt=""></button>
                         </div>
                         <div class="popular-card__item-list">
+                            <a target="_blank" href="./item.html" class="card-link"></a>
                             <div class="popular-card__image-wrapper-list">
                                 <img class="popular-card__image-list" src="./images/card-item.png">
                             </div>
@@ -1052,6 +1062,7 @@
                             <button class="popular-card_list-fav"><img src="./images/heart-icon.png" alt=""></button>
                         </div>
                         <div class="popular-card__item-list">
+                            <a target="_blank" href="./item.html" class="card-link"></a>
                             <div class="popular-card__image-wrapper-list">
                                 <img class="popular-card__image-list" src="./images/card-item.png">
                             </div>
@@ -1108,6 +1119,7 @@
                             <button class="popular-card_list-fav"><img src="./images/heart-icon.png" alt=""></button>
                         </div>
                         <div class="popular-card__item-list">
+                            <a target="_blank" href="./item.html" class="card-link"></a>
                             <div class="popular-card__image-wrapper-list">
                                 <img class="popular-card__image-list" src="./images/card-item.png">
                             </div>
