--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
             </div>
             <div class="section-item-container">
                 <div class="news-card popular-card card-shadow">
-                    <a target="_blank" href="#" class="card-link"></a>
+                    <a target="_blank" href="./item.html" class="card-link"></a>
                     <div class="popular-card__image-wrapper">
                         <img class="popular-card__image" src="./images/card-item.png">
                     </div>
@@ -313,7 +313,7 @@
                     </div>
                 </div>
                 <div class="news-card popular-card card-shadow">
-                    <a target="_blank" href="#" class="card-link"></a>
+                    <a target="_blank" href="./item.html" class="card-link"></a>
                     <div class="popular-card__image-wrapper">
                         <img class="popular-card__image" src="./images/card-item2.png">
                     </div>
@@ -328,7 +328,7 @@
                     </div>
                 </div>
                 <div class="news-card popular-card card-shadow">
-                    <a target="_blank" href="#" class="card-link"></a>
+                    <a target="_blank" href="./item.html" class="card-link"></a>
                     <div class="popular-card__image-wrapper">
                         <img class="popular-card__image" src="./images/card-item.png">
                     </div>
@@ -343,7 +343,7 @@
                     </div>
                 </div>
                 <div class="news-card popular-card card-shadow">
-                    <a target="_blank" href="#" class="card-link"></a>
+                    <a target="_blank" href="./item.html" class="card-link"></a>
                     <div class="popular-card__image-wrapper">
                         <img class="popular-card__image" src="./images/card-item2.png">
                     </div>
@@ -358,7 +358,7 @@
                     </div>
                 </div>
                 <div class="news-card popular-card card-shadow">
-                    <a target="_blank" href="#" class="card-link"></a>
+                    <a target="_blank" href="./item.html" class="card-link"></a>
                     <div class="popular-card__image-wrapper">
                         <img class="popular-card__image" src="./images/card-item.png">
                     </div>
