--- a/item.html
+++ b/item.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Химические решения: каталог</title>
+    <title>Химические решения: карточка товара</title>
     <link rel="stylesheet" href="./style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -74,7 +74,7 @@
         </div>
     </header>
     <main>
-        <section class="info-nav section">
+        <section class="info-nav info-nav_item section">
             <div class="info-nav_group">
                 <div class="info-nav_range">
                     <p class="info-nav_range-header">АССОРТИМЕНТ&nbsp;ТОВАРОВ</p>
@@ -145,15 +145,15 @@
                     <ul class="info-links__btn">
                         <li class="info-links__list-items"><img src="./images/seach-icon.png" alt="icon"
                                 width="33"><input type="text"
-                                class="info-links__list-item info-links__list-item_hover info-links__list-item_padding"
+                                class="info-links__list-item info-links__list-item_hover info-links__list-item_padding info-links_seaching"
                                 placeholder="ПОИСК"></li>
                     </ul>
                 </div>
             </div>
-            <div class="info-nav_back">
-                <img src="./images/arrow-orange-left.png" alt="Стрелка назад" class="info-nav_back-arrow">
-                <p class="info-nav_range-header info-nav_back-title">НАЗАД</p>
-            </div>
+            <a href="./catalog.html" class="info-nav_back">
+                    <img src="./images/arrow-orange-left.png" alt="Стрелка назад" class="info-nav_back-arrow">
+                    <p class="info-nav_range-header info-nav_back-title">НАЗАД</p>
+            </a>
         </section>
         <section class="item section">
             <div class="item-top">
@@ -183,17 +183,163 @@
                                     товара</label>
                             </li>
                         </ul>
-                        <div class="item-quantity">
-                            <img src="./images/arrow-up.png" alt="Добавить" class="arrow">
-                            <p><span>3</span>шт</p>
-                            <img src="./images/arrowDown.png" alt="Убавить" class="arrow">
+                        <div class="item-info_amount">
+                            <div class="popular-card__amount">
+                                <button class="popular-card__amount_btn"><img class="popular-card__amount_btn-img"
+                                        src="./images/arrow-up.png" alt="icon"></button>
+                                <p class="popular-card__amount_list">3 <span
+                                        class="popular-card__amount_list_color">Шт</span>
+                                </p>
+                                <button class="popular-card__amount_btn"><img class="popular-card__amount_btn-img"
+                                        src="./images/arrowDown.png" alt="icon"></button>
+                            </div>
+                            <button class="popular-card__btn popular-card__btn_mob item-info_amount-btn">В
+                                корзину</button>
                         </div>
-                        <button class="popular-card__btn popular-card__btn_mob">В корзину</button>
                     </div>
                 </div>
             </div>
         </section>
-        <section class="info section">
+        <section class="section">
+            <div class="info-links_group">
+                <div class="info-links info-links_column info-links_color-white">
+                    <h3 class="info-links__list_header info-links__title">ОПИСАНИЕ</h3>
+                    <div class="info-links__list info-links__description">
+                        <p class="info-links__description_text">Для покупки этого товара на странице оформления заказа
+                            необходимо указать паспортные данные
+                            покупателя: серия, номер, дата выдачи – требование ФЗ №115 от 07.08.2001.
+                            Ограничение на продажу физическим лицам – не более 50 грамм!
+                            Купить в розницу серебро азотнокислое (нитрат серебра) в нашем интернет-магазине могут
+                            физические и юридические лица. Минимальной суммы заказа нет.
+                            Серебро азотнокислое (нитрат серебра) — неорганическое вещество, соль серебра и азотной
+                            кислоты.
+                            Используется в качестве лабораторного реагента на галогениды, в гальванике, оптике и
+                            электронике, для химической металлизации</p>
+                        <div class="info-links__description_text info-links__description_text-color">
+                            <p class="info-links__list-items">Пр-во: АО “ЛенРеактив”</p>
+                            <p class="info-links__list-items">Внешний вид: порошок белого цвета</p>
+                            <p class="info-links__list-items">Квалификация: ХЧ (химически чистое)</p>
+                            <p class="info-links__list-items">Массовая доля основного вещества: 99,9%</p>
+                            <p class="info-links__list-items">ГОСТ 1277-75</li>
+                        </div>
+                    </div>
+                </div>
+                <div class="info-links info-links_color info-links_color-white">
+                    <h3 class="info-links__list_header info-links__title-color">ВАЖНО</h3>
+                    <div class="info-links__list">
+                        <ul class="info-links__marker-container">
+                            <li class="info-links__list-items info-links__marker">Данное вещество – химический реактив,
+                                не предназначенный
+                                для употребления внутрь или наружного применения!
+                            </li>
+                            <li class="info-links__list-items info-links__marker">Не является лекарственным
+                                (фармацевтическим) препаратом.
+                                Не является БАД.</li>
+                            <li class="info-links__list-items info-links__marker">Хранить в местах, исключающих доступ
+                                детей!
+                            </li>
+                            <li class="info-links__list-items info-links__marker">Хранить в герметичной ёмкости.
+                            </li>
+                            <li class="info-links__list-items info-links__marker">Избегайте попадания данного вещества
+                                на кожу, в глаза, на
+                                слизистые оболочки!
+                            </li>
+                            <li class="info-links__list-items info-links__marker"> При работе с данным веществом следует
+                                применять
+                                индивидуальные средства защиты, а также
+                                соблюдать правила личной гигиены.
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="section news section-item">
+            <div class="section-item-header">
+                <div class="news-header-wrapper">
+                    <h2 class="section-item__title item__title-color">ПОХОЖИЕ ПРОДУКТЫ</h2>
+                </div>
+            </div>
+            <div class="section-item-container">
+                <div class="news-card popular-card card-shadow">
+                    <a target="_blank" href="./item.html" class="card-link"></a>
+                    <div class="popular-card__image-wrapper">
+                        <img class="popular-card__image" src="./images/card-item.png">
+                    </div>
+                    <div class="popular-card__text-wrapper">
+                        <h3 class="new-card__title">Название данного товара или средства
+                            в две строчки</h3>
+                        <p class="new-card__text">
+                            Арт. 5683921
+                        </p>
+                        <p class="popular-card__price">700 руб / шт</p>
+                        <button class="popular-card__btn"><a target="_blank" class="popular-card__link" href="#">Узнать
+                                подробнее</a></button>
+                    </div>
+                </div>
+                <div class="news-card popular-card card-shadow">
+                    <a target="_blank" href="./item.html" class="card-link"></a>
+                    <div class="popular-card__image-wrapper">
+                        <img class="popular-card__image" src="./images/card-item2.png">
+                    </div>
+                    <div class="popular-card__text-wrapper">
+                        <h3 class="new-card__title">Название данного товара или средства
+                            в две строчки</h3>
+                        <p class="new-card__text">
+                            Арт. 5683921</p>
+                        <p class="popular-card__price">700 руб / шт</p>
+                        <button class="popular-card__btn"><a target="_blank" class="popular-card__link" href="#">Узнать
+                                подробнее</a></button>
+                    </div>
+                </div>
+                <div class="news-card popular-card card-shadow">
+                    <a target="_blank" href="./item.html" class="card-link"></a>
+                    <div class="popular-card__image-wrapper">
+                        <img class="popular-card__image" src="./images/card-item.png">
+                    </div>
+                    <div class="popular-card__text-wrapper">
+                        <h3 class="new-card__title">Название данного товара или средства
+                            в две строчки</h3>
+                        <p class="new-card__text">
+                            Арт. 5683921</p>
+                        <p class="popular-card__price">700 руб / шт</p>
+                        <button class="popular-card__btn"><a target="_blank" class="popular-card__link" href="#">Узнать
+                                подробнее</a></button>
+                    </div>
+                </div>
+                <div class="news-card popular-card card-shadow">
+                    <a target="_blank" href="./item.html" class="card-link"></a>
+                    <div class="popular-card__image-wrapper">
+                        <img class="popular-card__image" src="./images/card-item2.png">
+                    </div>
+                    <div class="popular-card__text-wrapper">
+                        <h3 class="new-card__title">Название данного товара или средства
+                            в две строчки</h3>
+                        <p class="new-card__text">
+                            Арт. 5683921</p>
+                        <p class="popular-card__price">700 руб / шт</p>
+                        <button class="popular-card__btn"><a target="_blank" class="popular-card__link" href="#">Узнать
+                                подробнее</a></button>
+                    </div>
+                </div>
+                <div class="news-card popular-card card-shadow">
+                    <a target="_blank" href="./item.html" class="card-link"></a>
+                    <div class="popular-card__image-wrapper">
+                        <img class="popular-card__image" src="./images/card-item.png">
+                    </div>
+                    <div class="popular-card__text-wrapper">
+                        <h3 class="new-card__title">Название данного товара или средства
+                            в две строчки</h3>
+                        <p class="new-card__text">
+                            Арт. 5683921</p>
+                        <p class="popular-card__price">700 руб / шт</p>
+                        <button class="popular-card__btn"><a target="_blank" class="popular-card__link" href="#">Узнать
+                                подробнее</a></button>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="info info-padding section">
             <div class="info-links_group">
                 <div class="info-links info-links_column">
                     <h3 class="info-links__list_header">ПРЕИМУЩЕСТВА</h3>
